fix: fixed scrollbar problem

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,15 +3,23 @@
 @tailwind utilities;
 
 .sir-shadow {
-  text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.5);
 }
 .nav-shadow {
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
 }
 html {
   scroll-behavior: smooth;
 }
-
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-thumb {
+  background: hsl(240, 20%, 40%);
+}
+::-webkit-scrollbar-track {
+  background: hsl(240, 20%, 5%);
+}
 @layer base {
   :root {
     --background: 240, 5%, 6%;
